data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1289.wast
;; 10. **Test Description:** Develop a WASM module where a function uses a `loop` containing a complex control flow with `if` and `block` statements. Perform `br` to loop's beginning, then make a call to an imported function having its nested control structures.     **Specific Constraint:** This tests operand stack consistency and branch correctness within complex loops.     **Relation to Control Flow Boundaries:** Ensures structural integrity and stack accuracy when looping back and crossing module boundaries involving nested controls.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func))
    (func (export "testFunction")
      (loop $outer
        (block $inner
          (if (i32.eq (i32.const 1) (i32.const 1))
            (then
              (call $external_func)
              (br $outer)
            )
            (else
              (block (block (br 1 (br 0 (i32.const 0)))))
            )
          )
        )
      )
    )
  )
  "type mismatch"
)